fix(modal): modal scroll on mobile, and take full height

--- a/src/components/Utils/Modal.module.scss
+++ b/src/components/Utils/Modal.module.scss
@@ -67,6 +67,7 @@
     max-width: none;
     display: flex;
     flex-direction: column;
+    max-height: 100%;
 
     main {
       flex-grow: 2;
